--- a/index.html
+++ b/index.html
@@ -439,8 +439,9 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
 <!-- Exemple 1 -->
 <h3><a name="ex1" class="anchor" ><span class="octicon octicon-link"></span>QPV, QVA et AQV</a></h3>
 
-<p> <i>- récupération des polygones définissant les quartiers prioritaires via une source de type GeoJSON <br>
-       - recherche des adresses relevant d'un NQPV (frontière noire), QVA (frontière jaune) ou AQV (frontière violette) via fonction turf.js PointsWithinPolygon <br> </i>
+<p> <i> <font size = "2">
+       - récupération des polygones définissant les quartiers prioritaires via une source de type GeoJSON <br>
+       - recherche des adresses relevant d'un NQPV (frontière noire), QVA (frontière jaune) ou AQV (frontière violette) via fonction turf.js PointsWithinPolygon <br> </i> </font>
        - survoler les quartiers prioritaires pour voir apparaître le nom de la zone
 </p>
 
