--- a/index.html
+++ b/index.html
@@ -443,7 +443,9 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
        - récupération des polygones définissant les quartiers prioritaires via une source de type GeoJSON <br>
        - recherche des adresses relevant d'un NQPV (frontière noire), QVA (frontière jaune) ou AQV (frontière violette) via fonction turf.js PointsWithinPolygon <br> </i> </font>
        <br>
-       - survoler les quartiers prioritaires pour voir apparaître le nom du quartier "prioritaire"
+       <ul>
+       <li> survoler les quartiers prioritaires pour voir apparaître le nom du quartier "prioritaire" </li>
+       </ul>
 </p>
 
 <p>
