--- a/index.html
+++ b/index.html
@@ -882,8 +882,10 @@ chart.exporting.menu.verticalAlign = "top";
        - la réunion des cercles d'influence apparaît en mauve ainsi que les points correspondants <br>
        - recherche des adresses relevant d'une zone d'influence des autres CS via fonction turf.js PointsWithinPolygon <br> </i> </font>
 	<br>
-       - survoler les zones d'IRIS pour voir apparaître le numéro et le nom de l'IRIS <br>
-       - survoler les points rouges pour voir apparaître le nom du centre social concerné
+       <ul>
+	<li> survoler les zones d'IRIS pour voir apparaître le numéro et le nom de l'IRIS </li>
+	<li> survoler les points rouges pour voir apparaître le nom du centre social concerné </li>
+	</ul>
 </p>
 
 <p>
