--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
 
 <font size = "2">
 <i>
-<fieldset style= "border: 1px solid #666; border-radius: 8px">
+<fieldset style= "border: 1px solid #666; border-radius: 8px; background-color: #BEBEBE">
 <legend> démarche </legend>
 <p>
        - récupération des polygones définissant les quartiers prioritaires via une source de type GeoJSON <br>
