--- a/index.html
+++ b/index.html
@@ -444,8 +444,8 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
 <fieldset style= "border: 1px solid #666; border-radius: 8px; background-color: #BEBEBE">
 <legend> démarche </legend>
 <p>
-       - récupération des polygones définissant les quartiers prioritaires via une source de type GeoJSON <br>
-       - recherche des adresses relevant d'un NQPV (frontière noire), QVA (frontière jaune) ou AQV (frontière violette) via fonction turf.js PointsWithinPolygon
+       récupération des polygones définissant les quartiers prioritaires via une source de type GeoJSON <br>
+       recherche des adresses relevant d'un NQPV (frontière noire), QVA (frontière jaune) ou AQV (frontière violette) via fonction turf.js PointsWithinPolygon
 </fieldset>
 </p>
 </i>
