--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
 </div>
 </fieldset>
 	
-<fieldset style= "border: 1px solid #666;
-  border-radius: 8px">
+<fieldset style= "border: 1px solid #666; border-radius: 8px">
 <div>
 <input type="checkbox" num_cb="2" id ="filtre_nb_act" name="type_filtre"/>
 	<label for="filtre_nb_act">Nombre total d'inscriptions de <b><u>la famille</u></b> aux activités sur la période<br>(placer les 2 curseurs aux nombres minimum et maximum souhaités)</label><br>
@@ -442,7 +441,7 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
 <font size = "2">
 <i>
 <fieldset style= "border: 1px solid #666; border-radius: 8px; background-color: #BEBEBE">
-<legend> démarche </legend>
+<legend><b> démarche </b></legend>
 <p>
        récupération des polygones définissant les quartiers prioritaires via une source de type GeoJSON <br>
        recherche des adresses relevant d'un NQPV (frontière noire), QVA (frontière jaune) ou AQV (frontière violette) via fonction turf.js PointsWithinPolygon
