--- a/index.html
+++ b/index.html
@@ -439,15 +439,17 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
 <h3><a name="ex1" class="anchor" ><span class="octicon octicon-link"></span>QPV, QVA et AQV</a></h3>
 
 <font size = "2">
-<i>
+
 <fieldset style= "border: 1px solid #666; border-radius: 8px; background-color: #BEBEBE">
 <legend><b> démarche </b></legend>
-<p>
-       récupération des polygones définissant les quartiers prioritaires via une source de type GeoJSON <br>
-       recherche des adresses relevant d'un NQPV (frontière noire), QVA (frontière jaune) ou AQV (frontière violette) via fonction turf.js PointsWithinPolygon
-</fieldset>
-</p>
+<i>
+<ul>
+<li>récupération des polygones définissant les quartiers prioritaires via une source de type GeoJSON </li>
+<li>recherche des adresses relevant d'un NQPV (frontière noire), QVA (frontière jaune) ou AQV (frontière violette) via fonction turf.js PointsWithinPolygon </li>
+</ul>
 </i>
+</fieldset>
+
 </font>
     
        <ul>
