--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
 
 <font size = "2">
 
-<fieldset style= "border: 1px solid #666; border-radius: 8px; background-color: #BEBEBE" ; padding:4px;>
+<fieldset style= "border: 1px solid #666; border-radius: 8px; background-color: #BEBEBE" ; padding-top: 0 ; padding-bottom: 0;>
 <legend><b> démarche </b></legend>
 <i>
 <ul>
