--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@ chart.exporting.menu.verticalAlign = "top";
 	    
 <font size = "2">
 	
-<fieldset style= "border: 1px solid #666; border-radius: 8px; background-color: #BEBEBE">
+<fieldset style= "border: 1px solid #666; border-radius: 8px; background-color: #BEBEBE ; padding-top: 0 ; padding-bottom: 0">
 <legend><b> démarche </b></legend>
 <i>
 <ul>
@@ -894,7 +894,7 @@ chart.exporting.menu.verticalAlign = "top";
 
 <font size = "2">
 
-<fieldset style= "border: 1px solid #666; border-radius: 8px; background-color: #BEBEBE">
+<fieldset style= "border: 1px solid #666; border-radius: 8px; background-color: #BEBEBE ; padding-top: 0 ; padding-bottom: 0">
 <legend><b> démarche </b></legend>
 <i>
 <ul>
