--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@ chart.data = [
   {
     type_quartier: "QVA",
     value: adresses_QVA.features.length,
-    labelColor: new am4core.color('#ffd700')
+    labelColor: new am4core.color('#f4c430')
   },
   {
     type_quartier: "AQV",
@@ -648,7 +648,7 @@ series.labels.template.maxWidth = 60;
 series.labels.template.wrap = true;
 series.colors.list = [
     new am4core.color('black'),
-    new am4core.color('#ffd700'),
+    new am4core.color('#f4c430'),
     new am4core.color('purple'),
     new am4core.color('blue')
 ];
@@ -833,7 +833,7 @@ chart.data = [
   {
     zone: "entre 10 et 15 min",
     value: PS[2].length,
-    labelColor: new am4core.color('#ffd700')
+    labelColor: new am4core.color('#f4c430')
   },
   {
     zone: "entre 15 et 30 min",
@@ -869,7 +869,7 @@ series.labels.template.wrap = true;
 series.colors.list = [
     new am4core.color('blue'),
     new am4core.color('green'),
-    new am4core.color('#ffd700'),
+    new am4core.color('#f4c430'),
     new am4core.color('orange'),
     new am4core.color('red')
 ];
