--- a/index.html
+++ b/index.html
@@ -180,12 +180,13 @@ En attente des résultats...
 }
 </style>
 
+<ul>
+<li>survoler les secteurs des graphiques pour visualiser le nombre d'adresses recensées</li>
+</ul>
 <div class="graphes" id="graphe_qpv"></div>
 <div class="graphes" id="graphe_trajet"></div>
 <div class="graphes" id="graphe_influence"></div>
-<div>
-Vous pouvez survoler les secteurs des graphiques pour visualiser le nombre d'adresses recensées
-</div>
+
 <!--on ajoute des listeners qui font apparaître-disparaître les choix possibles pour chaque filtre-->
 <script>
 var cases = document.querySelectorAll('input[name="type_filtre"]');
