--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
 <legend><b> démarche </b></legend>
 <i>
 <ul>
-<li>récupération des polygones définissant les quartiers prioritaires via une source de type GeoJSON </li>
+<li>&#10112 récupération des polygones définissant les quartiers prioritaires via une source de type GeoJSON </li>
 <li>recherche des adresses relevant d'un NQPV (frontière noire), QVA (frontière jaune) ou AQV (frontière violette) via fonction turf.js PointsWithinPolygon </li>
 </ul>
 </i>
