--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
 <fieldset style= "border: 1px solid #666; border-radius: 8px; background-color: #BEBEBE ; padding-top: 0 ; padding-bottom: 0">
 <legend><b> démarche </b></legend>
 <i>
-<ul {list-style:none; }>
+<ul style= "list-style: none">
 <li>&#10112 récupération des polygones définissant les quartiers prioritaires via une source de type GeoJSON </li>
 <li>recherche des adresses relevant d'un NQPV (frontière noire), QVA (frontière jaune) ou AQV (frontière violette) via fonction turf.js PointsWithinPolygon </li>
 </ul>
