--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
     - récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv <br>
     - on choisit de travailler au niveau famille et non au niveau individu <br>
     - on va étudier :  <br>
-    &nbsp &nbsp &nbsp Partie 1 : la localisation des adresses par rapport aux quartiers prioritaires de la ville (NQPV),  <br>
-    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp aux quartiers de veille active (QVA) et aux anciens quartiers de veille (AQV) <br>
+    &nbsp &nbsp &nbsp Partie 1 : la localisation des adresses par rapport aux quartiers prioritaires de la ville (NQPV), aux quartiers de veille active (QVA) et aux anciens quartiers de veille (AQV) <br>
     &nbsp &nbsp &nbsp Partie 2 : la répartition des adresses selon le temps de trajet à la 20ème Chaise <br>
     &nbsp &nbsp &nbsp Partie 3 : la répartition des adresses dans les IRIS et les zones d'influence des autres centres sociaux parisiens
 </p>
@@ -900,10 +899,11 @@ chart.exporting.menu.verticalAlign = "top";
 <i>
 <ul style= "list-style: none">
 <li>&#10112 récupération des polygones définissant les IRIS via une source de type GeoJSON</li>
-<li>&#10113 on exclut les adresses relevant de la zone de première influence de la 20ème Chaise (liste d'IRIS) (zone en fond bleu)</li>
-<li>&#10114 les zones d'influence des centres sociaux parisiens sont définies par un rayon de 750 mètres par défaut si l'utilisateur ne saisit pas un autre rayon</li>
-<li>&#10115 la réunion des cercles d'influence apparaît en mauve ainsi que les points correspondants</li>
-<li>&#10116 recherche des adresses relevant d'une zone d'influence des autres CS via fonction turf.js PointsWithinPolygon</li>
+<li>&#10113 exclusion des adresses relevant de la zone de première influence de la 20ème Chaise (liste de 5 IRIS, de 751207906 à 751207910) (zone en fond bleu)</li>
+<li>&#10114 construction des zones d'influence des centres sociaux parisiens : cercle de rayon 750 mètres par défaut si l'utilisateur ne saisit pas un autre rayon</li>
+<li>&#10115 construction des zones d'influence des centres sociaux hors influence de la 20ème Chaise via fonction turf.js Difference</li>
+<li>&#10116 construction de la zone réunion des cercles d'influence rognés via fonction truf.js Union (elle apparaît en mauve)</li>
+<li>&#10117 recherche des adresses relevant d'une zone d'influence des autres CS via fonction turf.js PointsWithinPolygon (ils apparaissent en mauve) (</li>
 </ul>
 </i>
 </fieldset>
