--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ var container = am4core.create("chartdiv", am4core.Container);
 container.width = am4core.percent(100);
 container.height = am4core.percent(100);
 container.layout = "horizontal";
+var graphe_qpv = container.createChild(am4charts.PieChart);
 </script>
 
 <style>
@@ -609,10 +610,10 @@ am4core.ready(function() {
 am4core.useTheme(am4themes_animated);
 // Themes end
 
-var chart = am4core.create(container, am4charts.PieChart);
-chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
+// var chart = am4core.create(, am4charts.PieChart);
+graphe_qpv.hiddenState.properties.opacity = 0; // this creates initial fade-in
 
-chart.data = [
+graphe_qpv.data = [
   {
     type_quartier: "NQPV",
     value: adresses_NQPV.features.length,
@@ -635,12 +636,12 @@ chart.data = [
     labelColor: new am4core.color('blue')
   }
 ];
-chart.radius = am4core.percent(50);
-chart.innerRadius = am4core.percent(35);
-chart.startAngle = 180;
-chart.endAngle = 360;  
+graphe_qpv.radius = am4core.percent(50);
+graphe_qpv.innerRadius = am4core.percent(35);
+graphe_qpv.startAngle = 180;
+graphe_qpv.endAngle = 360;  
 
-var series = chart.series.push(new am4charts.PieSeries());
+var series = graphe_qpv.series.push(new am4charts.PieSeries());
 series.dataFields.value = "value";
 series.dataFields.category = "type_quartier";
 
@@ -662,11 +663,11 @@ series.colors.list = [
     new am4core.color('blue')
 ];
 series.labels.template.text = "{category} {value.percent.formatNumber('#.')}%";
-chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
+graphe_qpv.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 
-chart.exporting.menu = new am4core.ExportMenu();
-chart.exporting.menu.align = "left";
-chart.exporting.menu.verticalAlign = "top";
+graphe_qpv.exporting.menu = new am4core.ExportMenu();
+graphe_qpv.exporting.menu.align = "left";
+graphe_qpv.exporting.menu.verticalAlign = "top";
 	
 }); // end am4core.ready()
 
