--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@ container.layout = "horizontal";
 }) ;
 </script>
 
+<div id="container"></div>
+		
 <style>
 #graphe_qpv {
   display: inline-block;
