--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ container.layout = "horizontal";
 <ul>
 <li>survoler les secteurs des graphiques pour visualiser le nombre d'adresses recensées</li>
 </ul>
-<div id="container"></div>
+<div id="chartdiv"></div>
 <div class="graphes" id="graphe_qpv"></div>
 <div class="graphes" id="graphe_trajet"></div>
 <div class="graphes" id="graphe_influence"></div>
