--- a/index.html
+++ b/index.html
@@ -163,12 +163,14 @@ En attente des résultats...
 <!-- on génère les graphiques en synthèse-->
 
 <script>
+var chart_test ;
 // Create and configure the container
-am4core.ready(function() {
+am4core.ready(function(chart_test) {
 var container = am4core.create("chartdiv", am4core.Container);
 container.width = am4core.percent(100);
 container.height = am4core.percent(100);
 container.layout = "horizontal";
+chart_test = container.createChild(am4charts.PieChart);
 }) ;
 </script>
 		
@@ -670,6 +672,8 @@ chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
 chart.exporting.menu.verticalAlign = "top";
+
+chart_test = chart ;
 	
 }); // end am4core.ready()
 
