--- a/index.html
+++ b/index.html
@@ -895,6 +895,8 @@ chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
 chart.exporting.menu.verticalAlign = "top";
 
+chart.parent = container;
+
 }); // end am4core.ready()
    
 	 
@@ -1195,6 +1197,8 @@ chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
 chart.exporting.menu.verticalAlign = "top";
+
+chart.parent = container;
 
 }); // end am4core.ready()
 
