--- a/index.html
+++ b/index.html
@@ -831,10 +831,10 @@ am4core.ready(function() {
 am4core.useTheme(am4themes_animated);
 // Themes end
 
-var chart = am4core.create("graphe_trajet", am4charts.PieChart);
-chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
+var chart2 = am4core.create("graphe_trajet", am4charts.PieChart);
+chart2.hiddenState.properties.opacity = 0; // this creates initial fade-in
 
-chart.data = [
+chart2.data = [
   {
     zone: "- de 5 min",
     value: PS[0].length,
@@ -861,12 +861,12 @@ chart.data = [
     labelColor: new am4core.color('red')
   }
 ];
-chart.radius = am4core.percent(50);
-chart.innerRadius = am4core.percent(35);
-chart.startAngle = 180;
-chart.endAngle = 360;  
+chart2.radius = am4core.percent(50);
+chart2.innerRadius = am4core.percent(35);
+chart2.startAngle = 180;
+chart2.endAngle = 360;  
 
-var series = chart.series.push(new am4charts.PieSeries());
+var series = chart2.series.push(new am4charts.PieSeries());
 series.dataFields.value = "value";
 series.dataFields.category = "zone";
 
@@ -889,13 +889,13 @@ series.colors.list = [
     new am4core.color('red')
 ];
 series.labels.template.text = "{category} {value.percent.formatNumber('#.')}%";
-chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
+chart2.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 
-chart.exporting.menu = new am4core.ExportMenu();
-chart.exporting.menu.align = "left";
-chart.exporting.menu.verticalAlign = "top";
+chart2.exporting.menu = new am4core.ExportMenu();
+chart2.exporting.menu.align = "left";
+chart2.exporting.menu.verticalAlign = "top";
 
-chart.parent = container;
+chart2.parent = container;
 
 }); // end am4core.ready()
    
