--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@ var container = am4core.create("chartdiv", am4core.Container);
 container.width = am4core.percent(100);
 container.height = am4core.percent(100);
 container.layout = "horizontal";
+container.fill = new am4core.color('grey');
+container.fillOpacity = 0.2;
 
 </script>
 
