--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@ var container = am4core.create("chartdiv", am4core.Container);
 container.width = am4core.percent(100);
 container.height = am4core.percent(100);
 container.layout = "horizontal";
+container.background = new am4core.color('#C0C0C0');
 container.fill = new am4core.color('grey');
-container.fillOpacity = 0.2;
+container.fillOpacity = 0.4;
 
 </script>
 
