--- a/index.html
+++ b/index.html
@@ -652,6 +652,7 @@ series.labels.template.text = "{category} {value.percent.formatNumber('#.')}%";
 chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 
 chart.background.fill = new am4core.color('#C0C0C0');
+chart.background.opacity = 0.5;
 chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
 chart.exporting.menu.verticalAlign = "top";
@@ -874,6 +875,7 @@ series.labels.template.text = "{category} {value.percent.formatNumber('#.')}%";
 chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 
 chart.background.fill = new am4core.color('#C0C0C0');
+chart.background.opacity = 0.5;
 chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
 chart.exporting.menu.verticalAlign = "top";
@@ -1176,6 +1178,7 @@ series.labels.template.text = "{category} {value.percent.formatNumber('#.')}%";
 chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 
 chart.background.fill = new am4core.color('#C0C0C0');
+chart.background.opacity = 0.5;
 chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
 chart.exporting.menu.verticalAlign = "top";
