--- a/index.html
+++ b/index.html
@@ -674,9 +674,9 @@ chart.exporting.menu.verticalAlign = "top";
 <legend><b> démarche </b></legend>
 <i>
 <ul style= "list-style: none">
-<li></i>&#10112<i> récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) à la 20ème Chaise par Google Map API</li>
+<li></i><font size = "5">&#10112<i></font> récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) à la 20ème Chaise par Google Map API</li>
 <li><s>détermination des enveloppes convexes(-concaves) par algorithme externe </s> &nbsp (laissé en suspens car non adapté aux petits groupes de points asymétriques)</li>
-<li></i>&#10113<i> détermination des cercles correspondant à chaque zone (certains points ne sont pas dans leur cercle de couleur dans le cas où la distance à vol d'oiseau s'éloigne
+<li></i><font size = "5">&#10113<i></font> détermination des cercles correspondant à chaque zone (certains points ne sont pas dans leur cercle de couleur dans le cas où la distance à vol d'oiseau s'éloigne
 	du temps calculé par Google Map API pour se rendre à pied à la 20ème Chaise)</li>
 </ul>
 </i>
