--- a/index.html
+++ b/index.html
@@ -440,8 +440,8 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
 <legend><b> démarche </b></legend>
 <i>
 <ul style= "list-style: none">
-<li>&#10112 récupération des polygones définissant les quartiers prioritaires via une source de type GeoJSON </li>
-<li>&#10113 recherche des adresses relevant d'un NQPV (frontière noire), QVA (frontière jaune) ou AQV (frontière violette) via fonction turf.js PointsWithinPolygon </li>
+<li></i><font size = "4">&#10112<i></font> récupération des polygones définissant les quartiers prioritaires via une source de type GeoJSON </li>
+<li></i><font size = "4">&#10113<i></font> recherche des adresses relevant d'un NQPV (frontière noire), QVA (frontière jaune) ou AQV (frontière violette) via fonction turf.js PointsWithinPolygon </li>
 </ul>
 </i>
 </fieldset>
@@ -674,9 +674,9 @@ chart.exporting.menu.verticalAlign = "top";
 <legend><b> démarche </b></legend>
 <i>
 <ul style= "list-style: none">
-<li></i><font size = "5">&#10112<i></font> récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) à la 20ème Chaise par Google Map API</li>
+<li></i><font size = "4">&#10112<i></font> récupération des temps de trajet et distance (à pied, en voiture, en transports en commun) à la 20ème Chaise par Google Map API</li>
 <li><s>détermination des enveloppes convexes(-concaves) par algorithme externe </s> &nbsp (laissé en suspens car non adapté aux petits groupes de points asymétriques)</li>
-<li></i><font size = "5">&#10113<i></font> détermination des cercles correspondant à chaque zone (certains points ne sont pas dans leur cercle de couleur dans le cas où la distance à vol d'oiseau s'éloigne
+<li></i><font size = "4">&#10113<i></font> détermination des cercles correspondant à chaque zone (certains points ne sont pas dans leur cercle de couleur dans le cas où la distance à vol d'oiseau s'éloigne
 	du temps calculé par Google Map API pour se rendre à pied à la 20ème Chaise)</li>
 </ul>
 </i>
@@ -898,12 +898,12 @@ chart.exporting.menu.verticalAlign = "top";
 <legend><b> démarche </b></legend>
 <i>
 <ul style= "list-style: none">
-<li>&#10112 récupération des polygones définissant les IRIS via une source de type GeoJSON</li>
-<li>&#10113 exclusion des adresses relevant de la zone de première influence de la 20ème Chaise (liste de 5 IRIS, de 751207906 à 751207910) (zone en fond bleu)</li>
-<li>&#10114 construction des zones d'influence des centres sociaux parisiens : cercle de rayon 750 mètres par défaut si l'utilisateur ne saisit pas un autre rayon</li>
-<li>&#10115 construction des zones d'influence des centres sociaux hors influence de la 20ème Chaise via fonction turf.js Difference</li>
-<li>&#10116 construction de la zone réunion des cercles d'influence rognés via fonction truf.js Union (elle apparaît en mauve)</li>
-<li>&#10117 recherche des adresses relevant d'une zone d'influence des autres CS via fonction turf.js PointsWithinPolygon (ils apparaissent en mauve) (</li>
+<li></i><font size = "4">&#10112<i></font> récupération des polygones définissant les IRIS via une source de type GeoJSON</li>
+<li></i><font size = "4">&#10113<i></font> exclusion des adresses relevant de la zone de première influence de la 20ème Chaise (liste de 5 IRIS, de 751207906 à 751207910) (zone en fond bleu)</li>
+<li></i><font size = "4">&#10114<i></font> construction des zones d'influence des centres sociaux parisiens : cercle de rayon 750 mètres par défaut si l'utilisateur ne saisit pas un autre rayon</li>
+<li></i><font size = "4">&#10115<i></font> construction des zones d'influence des centres sociaux hors influence de la 20ème Chaise via fonction turf.js Difference</li>
+<li></i><font size = "4">&#10116<i></font> construction de la zone réunion des cercles d'influence rognés via fonction truf.js Union (elle apparaît en mauve)</li>
+<li></i><font size = "4">&#10117<i></font> recherche des adresses relevant d'une zone d'influence des autres CS via fonction turf.js PointsWithinPolygon (ils apparaissent en mauve) (</li>
 </ul>
 </i>
 </fieldset>
