--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@ chart.exporting.menu.verticalAlign = "top";
 <li></i><font size = "4">&#10114<i></font> construction des zones d'influence des centres sociaux parisiens : cercle de rayon 750 mètres par défaut si l'utilisateur ne saisit pas un autre rayon</li>
 <li></i><font size = "4">&#10115<i></font> construction des zones d'influence des centres sociaux hors influence de la 20ème Chaise via fonction turf.js Difference</li>
 <li></i><font size = "4">&#10116<i></font> construction de la zone réunion des cercles d'influence rognés via fonction truf.js Union (elle apparaît en mauve)</li>
-<li></i><font size = "4">&#10117<i></font> recherche des adresses relevant d'une zone d'influence des autres CS via fonction turf.js PointsWithinPolygon (ils apparaissent en mauve) (</li>
+<li></i><font size = "4">&#10117<i></font> recherche des adresses relevant d'une zone d'influence des autres CS via fonction turf.js PointsWithinPolygon (ils apparaissent en mauve)</li>
 </ul>
 </i>
 </fieldset>
