--- a/index.html
+++ b/index.html
@@ -1111,6 +1111,22 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
 
 layer_adresses_CS.addTo(map_3);
 
+// on calcule le nombre d'adresses dans chaque IRIS de la zone d'influence de la 20ème Chaise
+var Layer_IRIS_ZI_20C = L.geoJson(iris, {filter: Filtre_influence_20C, style:  {color: 'black',weight: 1.5, opacity : 0.7, fill : true, fillColor : 'orange', fillOpacity : 0.5}})
+var points_turf = [];
+for (let i=0 ; i < inside_20C.features.length; i++)
+	{
+	var lnglat = [inside.features[i].geometry.coordinates[1], inside.features[i].geometry.coordinates[0]];
+	points_turf.push(lnglat);
+	};
+console.log(points_turf);
+	 
+Layer_IRIS_ZI_20C.eachLayer(function(layer)
+{
+
+});
+
+
  document.getElementById("comment_3").innerHTML = inside_20C.features.length +
 	 ' sont dans la zone d\'influence de la 20ème Chaise '
 	  + (layer_adresses.getLayers().length === 0 ? '' : '(' + parseFloat(inside_20C.features.length / layer_adresses.getLayers().length * 100).toFixed(0)+ ' %' + ')')
