--- a/index.html
+++ b/index.html
@@ -1114,10 +1114,9 @@ layer_adresses_CS.addTo(map_3);
 // on calcule le nombre d'adresses dans chaque IRIS de la zone d'influence de la 20ème Chaise
 var Layer_IRIS_ZI_20C = L.geoJson(iris, {filter: Filtre_influence_20C, style:  {color: 'black',weight: 1.5, opacity : 0.7, fill : true, fillColor : 'orange', fillOpacity : 0.5}})
 var points_turf = [];
-console.log(inside_20C);
 for (let i=0 ; i < inside_20C.features.length; i++)
 	{
-	var lnglat = [inside.features[i].geometry.coordinates[1], inside.features[i].geometry.coordinates[0]];
+	var lnglat = [inside_20C.features[i].geometry.coordinates[1], inside_20C.features[i].geometry.coordinates[0]];
 	points_turf.push(lnglat);
 	};
 console.log(points_turf);
