--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@ console.log(layer);
 var inside = 
 turf.pointsWithinPolygon(
  turf.points(points_turf), 
- layer.toGeoJSON().geometry.coordinates
+ layer.geometry.coordinates
   );
 console.log(inside.length);
 });
