--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@ for (let i=0 ; i < inside_20C.features.length; i++)
 	 
 Layer_IRIS_ZI_20C.eachLayer(function(layer)
 {
-console.log(layer);
+console.log(layer.feature.geometry.coordinates);
 var inside = 
 turf.pointsWithinPolygon(
  turf.points(points_turf), 
