--- a/index.html
+++ b/index.html
@@ -1122,6 +1122,7 @@ for (let i=0 ; i < inside_20C.features.length; i++)
 	 
 Layer_IRIS_ZI_20C.eachLayer(function(layer)
 {
+console.log(turf.points(points_turf));
 console.log(turf.flip(turf.polygon(layer.feature.geometry.coordinates)));
 var inside = 
 turf.pointsWithinPolygon(
