--- a/index.html
+++ b/index.html
@@ -1129,7 +1129,7 @@ turf.pointsWithinPolygon(
  turf.points(points_turf), 
  turf.flip(turf.polygon(layer.feature.geometry.coordinates))
   );
-console.log(inside.length);
+console.log(inside);
 });
 
 
